--- a/style.css
+++ b/style.css
@@ -28,7 +28,10 @@ nav a:hover {
 }
 
 .hero {
+
+  display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: column;
   text-align: center;
   
